# libvmod-valkey

./: Dockerfile  README.rst  configure.ac  docker-compose.yml
.github/workflows/: main.yml
debian/: changelog  control  dirs
redhat/: vmod-valkey.spec
src/: Makefile.am  cluster.c  cluster.h  core.c  core.h  sentinel.c  vmod_valkey.c  vmod_valkey.vcc
src/tests/: clustered.ASK-reply-messages.vtc  clustered.MOVED-reply-messages.vtc  clustered.basics-using-private-pool.vtc  clustered.basics-using-shared-pool.vtc  clustered.template.vtc  runner.sh  standalone.6000000.TLS.vtc  standalone.6000000.sentinels.vtc.disabled  standalone.VCL-temperature-and-discard.vtc  standalone.auto-role.vtc  standalone.basics-using-private-pool.vtc  standalone.basics-with-multiple-servers-and-private-pool.vtc  standalone.basics-with-multiple-servers-and-shared-pool.vtc  standalone.blocked-workers.vtc  standalone.command-execution-timeout.vtc  standalone.easy-command-timeout.vtc  standalone.password-protected-instances.vtc  standalone.prometheus-stats.vtc  standalone.proxied-methods.vtc  standalone.subnets-using-private-pool.vtc  standalone.subnets-using-shared-pool.vtc  standalone.template.vtc
